--- a/index.html
+++ b/index.html
@@ -6,10 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Pacifico&display=swap"
+    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+    rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
 
 <body>
-    <h1>Portfolio</h1>
-    <p>tekst</p>
+    <header class="menu-bar">
+        <div class="logo">LOGO</div>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="burger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </header>
+
+    <div class="hero_section">
+        <div><img src="" alt=""></div>
+        <div>
+            <h1>Welcome to my portfolio</h1>
+            <a class="button" href="">See my work</a>
+        </div>
+    </div>
+
+    <div class="pink_background">
+        <div>
+            <div>
+                <h2>A short introduction</h2>
+                <p>Hi there, I'm Melanie Grath, a multimedia design student from Denmark. Welcome to my portfolio. I’m
+                    passionate about all
+                    things creative – from graphic design to web development. This portfolio showcases some of my
+                    favorite projects, and I’m
+                    excited to share them with you! If you're interested in collaborating or have any questions, feel
+                    free to reach out. I’d
+                    love to hear from you!</p>
+                <a class="button" href="">See my work</a>
+            </div>
+            <div><img src="" alt="map with pin"></div>
+            <div><img src="" alt="picture of me"></div>
+        </div>
+
+    </div>
+
+    <div class="green_background">
+        <div>
+            <h2>First semester</h2>
+            <p>Here you’ll find a collection of my work from the first semester, divided into the four main courses:
+                fundamental web,
+                UX, animation and content. I take you through my solution to the different projects and showcase my work
+                process and
+                what I've learned from it.</p>
+        </div>
+        <div class="grid_4">
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+        </div>
+
+    </div>
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
