--- a/animation.html
+++ b/animation.html
@@ -2,56 +2,86 @@
 <html lang="en">
 
 <head>
+    <meta name="robots" content="noindex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>animation</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>Animation</h1>
-        <p>In this course, we explored the fundamentals of animation, focusing on using JavaScript and CSS to create
-            interactive
-            and engaging visual elements. Through hands-on exercises, we learned how animation enhances user
-            experiences,
-            particularly in the context of game development. A significant emphasis was placed on the importance of
-            style when
-            designing game assets, including character and background design, to ensure a visually cohesive and
-            appealing product.</p>
-        <p>We also developed skills in Adobe Illustrator, enabling us to create high-quality assets for our projects.
-            Additionally,
-            we learned to create paper prototypes, which helped us map out the functionality and purpose of our games in
-            a tangible
-            way. To streamline the development process, we created activity diagrams, offering a structured overview of
-            game
-            mechanics, which made the coding process more efficient and organized.</p>
-    </div>
-
-
-
-    <div class="green_background">
+    <main>
         <div>
-            <div class="4_pics">
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+            <h1>Animation</h1>
+            <p>In this course, we explored the fundamentals of animation, focusing on using JavaScript and CSS to create
+                interactive
+                and engaging visual elements. Through hands-on exercises, we learned how animation enhances user
+                experiences,
+                particularly in the context of game development. A significant emphasis was placed on the importance of
+                style when
+                designing game assets, including character and background design, to ensure a visually cohesive and
+                appealing product.</p>
+            <p>We also developed skills in Adobe Illustrator, enabling us to create high-quality assets for our
+                projects.
+                Additionally,
+                we learned to create paper prototypes, which helped us map out the functionality and purpose of our
+                games in
+                a tangible
+                way. To streamline the development process, we created activity diagrams, offering a structured overview
+                of
+                game
+                mechanics, which made the coding process more efficient and organized.</p>
+        </div>
 
-            </div>
+
+
+        <div class="green_background">
             <div>
-                <h2>Game design</h2>
-                <p>For this assignment, we created an original "click" game with items, points, lives, and a timer. My
-                    concept featured a
-                    sleeping girl where the player had to collect teddy bears (good) while avoiding demons (bad).
-                    Although illness prevented
-                    me from fully designing characters or completing the project, I developed a prototype and did
-                    animations using
-                    JavaScript, and CSS using teacher-provided assets.</p>
-                <a class="button" href="https://youtube.com/shorts/92HQn29YACw">See prototype</a>
-                <a class="button" href="http://melaniegrath.dk/kea/04_animation/version_3/spil.html">See game</a>
+                <div class="4_pics">
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+
+                </div>
+                <div>
+                    <h2>Game design</h2>
+                    <p>For this assignment, we created an original "click" game with items, points, lives, and a timer.
+                        My
+                        concept featured a
+                        sleeping girl where the player had to collect teddy bears (good) while avoiding demons (bad).
+                        Although illness prevented
+                        me from fully designing characters or completing the project, I developed a prototype and did
+                        animations using
+                        JavaScript, and CSS using teacher-provided assets.</p>
+                    <a class="button" href="https://youtube.com/shorts/92HQn29YACw">See prototype</a>
+                    <a class="button" href="http://melaniegrath.dk/kea/04_animation/version_3/spil.html">See game</a>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
 </body>
 
