--- a/ux.html
+++ b/ux.html
@@ -2,9 +2,30 @@
 <html lang="en">
 
 <head>
+    <meta name="robots" content="noindex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UX</title>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -30,10 +51,10 @@
     <div class="green_background">
         <div>
             <div class="4_pics">
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div><img src="" alt="protoype"></div>
+                <div><img src="" alt="moodboard"></div>
+                <div><img src="" alt="mindmap"></div>
+                <div><img src="" alt="styletile"></div>
 
             </div>
             <div>
