sæt indhold ind og grids

--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
                     to grow, and I’d love
                     to collaborate on exciting projects that bring ideas to life.</p>
             </div>
+            <div><img src="img/about/about_1.png" alt="me"></div>
         </div>
     </div>
 
