--- a/animation.html
+++ b/animation.html
@@ -59,14 +59,14 @@
 
         <div class="green_background">
             <div>
-                <div class="4_pics">
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                <div class="grid_2-1">
+                    <div><img src="img/animation/animation_1.png" alt="style inspiration"></div>
+                    <div><img src="img/animation/animation_2.png" alt="activity diagram"></div>
+                    <div><img src="img/animation/animation_3.png" alt="paper prototype"></div>
+                    <div><img src="img/animation/animation_4.png" alt="game"></div>
 
                 </div>
-                <div>
+                <div class="project">
                     <h2>Game design</h2>
                     <p>For this assignment, we created an original "click" game with items, points, lives, and a timer.
                         My
