--- a/content.html
+++ b/content.html
@@ -51,14 +51,14 @@
 
     <div class="green_background">
         <div>
-            <div class="4_pics">
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+            <div class="grid_2-1">
+                <div><img src="img/content/content_1.png" alt="layoutdiagrams"></div>
+                <div><img src="img/content/content_2.png" alt="lighthouse test"></div>
+                <div><img src="img/content/content_3.png" alt="styletile"></div>
+                <div><img src="img/content/content_4.png" alt="wireframes"></div>
 
             </div>
-            <div>
+            <div class="project">
                 <h2>Redesign of a website</h2>
                 <p>For this assignment, we redesigned a company’s website by interviewing the owner of a local antique
                     store and capturing
