--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main>
         <div class="hero_section">
-            <div><img src="" alt=""></div>
+            <div><img src="img/index/hero_img.webp" alt="laptop"></div>
             <div>
                 <h1>Welcome to my portfolio</h1>
                 <a class="button" href="">See my work</a>
@@ -70,8 +70,8 @@
                     love to hear from you!</p>
                 <a class="button" href="">See my work</a>
             </div>
-            <div><img src="" alt="map with pin"></div>
-            <div><img src="" alt="picture of me"></div>
+            <div class="order"><img src="img/index/map.png" alt="map with pin"></div>
+            <div><img src="img/index/me.png" alt="picture of me"></div>
 
         </div>
 
@@ -86,22 +86,31 @@
                     what I've learned from it.</p>
             </div>
             <div class="grid_4">
-                <div><img src="" alt="boks"></div>
-                <div><img src="" alt="boks"></div>
-                <div><img src="" alt="boks"></div>
-                <div><img src="" alt="boks"></div>
+                <div><img src="img/index/box_1.png" alt="boks"></div>
+                <div><img src="img/index/box_2.png" alt="boks"></div>
+                <div><img src="img/index/box_3.png" alt="boks"></div>
+                <div><img src="img/index/box_4.png" alt="boks"></div>
             </div>
 
         </div>
     </main>
     <footer>
         <div class="footer_flex">
-            <img src="" alt="icon">
-            <img src="" alt="icon">
-            <img src="" alt="icon">
-            <img src="" alt="icon">
+            <a href="https://www.linkedin.com" target="_blank">
+                <img src="img/footer/icon_1.png" alt="icon linked in">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="img/footer/icon_2.png" alt="icon instagram">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="img/footer/icon_3.png" alt="icon facebook">
+            </a>
+            <a href="mailto:your_email@example.com">
+                <img src="img/footer/icon_4.png" alt="icon mail">
+            </a>
         </div>
     </footer>
+
 
 
 
