--- a/ux.html
+++ b/ux.html
@@ -50,14 +50,14 @@
 
     <div class="green_background">
         <div>
-            <div class="4_pics">
+            <div class="grid_2-1">
                 <div><img src="" alt="protoype"></div>
                 <div><img src="" alt="moodboard"></div>
                 <div><img src="" alt="mindmap"></div>
                 <div><img src="" alt="styletile"></div>
 
             </div>
-            <div>
+            <div class="project">
                 <h2>Topical website</h2>
                 <p>For this assignment, we were tasked with creating a website about any given topic of interest to us.
                     To create this
