--- a/web.html
+++ b/web.html
@@ -50,14 +50,14 @@
 
     <div class="green_background">
         <div class="grid_1-1">
-            <div class="4_pics">
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+            <div class="grid_2-1">
+                <div><img src="img/web/web_1.png" alt="screendump"></div>
+                <div><img src="img/web/web_2.png" alt="screendump"></div>
+                <div><img src="img/web/web_3.png" alt="screendump"></div>
+                <div><img src="img/web/web_4.png" alt="screendump"></div>
 
             </div>
-            <div>
+            <div class="project">
                 <h2>Simple website</h2>
                 <p>For this assignment, we were tasked with creating a website by incorporating content and structuring
                     it using layout
