menu og hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <body>
     <header class="menu-bar">
         <div class="logo">
-            <img src="logo.png" alt="Logo" />
+            <a href="index.html">
+                <img src="img/logo.png" alt="Melanie Grath" />
+            </a>
         </div>
         <nav class="menu">
             <ul>
@@ -50,12 +52,15 @@
 
     <main>
         <div class="hero_section">
-            <div><img src="img/index/hero_img.webp" alt="laptop"></div>
-            <div>
+            <div class="hero_img">
+                <img src="img/index/hero_img.webp" alt="laptop">
+            </div>
+            <div class="hero_text">
                 <h1>Welcome to my portfolio</h1>
                 <a class="button" href="">See my work</a>
             </div>
         </div>
+
 
         <div class="pink_background grid_3">
 
