grid, footer, web

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="hero_text">
                 <h1>Welcome to my portfolio</h1>
-                <a class="button" href="">See my work</a>
+                <a class="button" href="#first_semester">See my work</a>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
                     excited to share them with you! If you're interested in collaborating or have any questions, feel
                     free to reach out. I’d
                     love to hear from you!</p>
-                <a class="button" href="">See my work</a>
+                <a class="button" href="mailto:your_email@example.com">Contact me</a>
             </div>
             <div class="order"><img src="img/index/map.png" alt="map with pin"></div>
             <div><img src="img/index/me.png" alt="picture of me"></div>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="green_background">
-            <div>
+            <div id="first_semester">
                 <h2>First semester</h2>
                 <p>Here you’ll find a collection of my work from the first semester, divided into the four main courses:
                     fundamental web,
@@ -115,8 +115,6 @@
             </a>
         </div>
     </footer>
-
-
 
 
     <script src="script.js"></script>
