--- a/animation.html
+++ b/animation.html
@@ -30,6 +30,27 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+<header class="menu-bar">
+    <div class="logo">
+        <a href="index.html">
+            <img src="img/logo.png" alt="Melanie Grath" />
+        </a>
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="web.html">Web</a></li>
+            <li><a href="ux.html">UX</a></li>
+            <li><a href="animation.html">Animation</a></li>
+            <li><a href="content.html">Content</a></li>
+            <li><a href="about.html">About me</a></li>
+        </ul>
+    </nav>
+    <div class="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</header>
 
 <body>
     <main>
@@ -82,7 +103,23 @@
             </div>
         </div>
     </main>
-
+    <footer>
+        <div class="footer_flex">
+            <a href="https://www.linkedin.com" target="_blank">
+                <img src="img/footer/icon_1.png" alt="icon linked in">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="img/footer/icon_2.png" alt="icon instagram">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="img/footer/icon_3.png" alt="icon facebook">
+            </a>
+            <a href="mailto:your_email@example.com">
+                <img src="img/footer/icon_4.png" alt="icon mail">
+            </a>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
