--- a/ux.html
+++ b/ux.html
@@ -27,6 +27,27 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+<header class="menu-bar">
+    <div class="logo">
+        <a href="index.html">
+            <img src="img/logo.png" alt="Melanie Grath" />
+        </a>
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="web.html">Web</a></li>
+            <li><a href="ux.html">UX</a></li>
+            <li><a href="animation.html">Animation</a></li>
+            <li><a href="content.html">Content</a></li>
+            <li><a href="about.html">About me</a></li>
+        </ul>
+    </nav>
+    <div class="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</header>
 
 <body>
     <div>
@@ -73,7 +94,7 @@
         </div>
     </div>
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
