ret i div/classes

--- a/animation.html
+++ b/animation.html
@@ -54,7 +54,7 @@
 
 <body>
     <main>
-        <div>
+        <div class="course_text">
             <h1>Animation</h1>
             <p>In this course, we explored the fundamentals of animation, focusing on using JavaScript and CSS to create
                 interactive
@@ -79,7 +79,7 @@
 
 
         <div class="green_background">
-            <div>
+            <div class="grid_1-1">
                 <div class="grid_2-1">
                     <div><img src="img/animation/animation_1.png" alt="style inspiration"></div>
                     <div><img src="img/animation/animation_2.png" alt="activity diagram"></div>
