--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="green_background">
-            <div id="first_semester">
+            <div class="first_semester">
                 <h2>First semester</h2>
                 <p>Here you’ll find a collection of my work from the first semester, divided into the four main courses:
                     fundamental web,
