--- a/ux.html
+++ b/ux.html
@@ -50,7 +50,7 @@
 </header>
 
 <body>
-    <div>
+    <div class="course_text">
         <h1>UX - User experience</h1>
         <p>In this course, we explored a variety of research methods to uncover user needs, behaviors, and motivations.
             These
@@ -70,12 +70,12 @@
 
 
     <div class="green_background">
-        <div>
+        <div class="grid_1-1">
             <div class="grid_2-1">
-                <div><img src="" alt="protoype"></div>
-                <div><img src="" alt="moodboard"></div>
-                <div><img src="" alt="mindmap"></div>
-                <div><img src="" alt="styletile"></div>
+                <div><img src="img/ux/ux_1.png" alt="protoype"></div>
+                <div><img src="img/ux/ux_2.png" alt="moodboard"></div>
+                <div><img src="img/ux/ux_3.png" alt="mindmap"></div>
+                <div><img src="img/ux/ux_4.png" alt="styletile"></div>
 
             </div>
             <div class="project">
