--- a/content.html
+++ b/content.html
@@ -48,7 +48,7 @@
 </header>
 
 <body>
-    <div>
+    <div class="course_text">
         <h1>Content</h1>
         <p>In this course, we explored the comprehensive process of content creation, covering pre-production,
             production, and
@@ -71,7 +71,7 @@
 
 
     <div class="green_background">
-        <div>
+        <div class="grid_1-1">
             <div class="grid_2-1">
                 <div><img src="img/content/content_1.png" alt="layoutdiagrams"></div>
                 <div><img src="img/content/content_2.png" alt="lighthouse test"></div>
