--- a/about.html
+++ b/about.html
@@ -88,36 +88,35 @@
                 success.</p>
         </div>
         <div class="grid_4">
-            <div>
+            <div class="skills">
                 <img src="img/about/icon_1.png" alt="icon">
                 <h2 class="bold">Design</h2>
                 <p>Design is my focus, specializing in creating clear and visually engaging graphics. From logos to
                     illustrations and
                     layouts, I approach each project with creativity and precision.</p>
             </div>
-            <div>
+            <div class="skills">
                 <img src="img/about/icon_2.png" alt="icon">
-                <h2 class="bold"></h2>
-                <p>Design is my focus, specializing in creating clear and visually engaging graphics. From logos to
-                    illustrations
-                    and
-                    layouts, I approach each project with creativity and precision.</p>
+                <h2 class="bold">Web development</h2>
+                <p>I have experience in web development with HTML, CSS, and JavaScript, combining design and coding to
+                    create interactive,
+                    user-friendly websites.
+                </p>
             </div>
-            <div>
+            <div class="skills">
                 <img src="img/about/icon_1.png" alt="icon">
-                <h2 class="bold">Design</h2>
-                <p>Design is my focus, specializing in creating clear and visually engaging graphics. From logos to
-                    illustrations
-                    and
-                    layouts, I approach each project with creativity and precision.</p>
+                <h2 class="bold">Language skills</h2>
+                <p>I am fluent in Danish and English, with basic German skills, enabling me to work in international
+                    settings and connect
+                    with diverse cultures.
+                </p>
             </div>
-            <div>
+            <div class="skills">
                 <img src="img/about/icon_1.png" alt="icon">
-                <h2 class="bold">Design</h2>
-                <p>Design is my focus, specializing in creating clear and visually engaging graphics. From logos to
-                    illustrations
-                    and
-                    layouts, I approach each project with creativity and precision.</p>
+                <h2 class="bold">Communication</h2>
+                <p>I value clear communication and collaboration, ensuring projects align with goals. I thrive in team
+                    settings, sharing
+                    ideas to deliver creative solutions.</p>
             </div>
 
         </div>
