--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="pink_background grid_3">
 
-            <div>
+            <div class="intro_text">
                 <h2>A short introduction</h2>
                 <p>Hi there, I'm Melanie Grath, a multimedia design student from Denmark. Welcome to my portfolio. I’m
                     passionate about all
@@ -91,26 +91,34 @@
                     what I've learned from it.</p>
             </div>
             <div class="grid_4">
-                <div><img src="img/index/box_1.png" alt="boks"></div>
-                <div><img src="img/index/box_2.png" alt="boks"></div>
-                <div><img src="img/index/box_3.png" alt="boks"></div>
-                <div><img src="img/index/box_4.png" alt="boks"></div>
+                <a class="zoom" href="web.html">
+                    <div><img src="img/index/box_1.png" alt="boks"></div>
+                </a>
+                <a class="zoom" href="ux.html">
+                    <div><img src="img/index/box_2.png" alt="boks"></div>
+                </a>
+                <a class="zoom" href="animation.html">
+                    <div><img src="img/index/box_3.png" alt="boks"></div>
+                </a>
+                <a class="zoom" href="content.html">
+                    <div><img src="img/index/box_4.png" alt="boks"></div>
+                </a>
             </div>
 
         </div>
     </main>
     <footer>
         <div class="footer_flex">
-            <a href="https://www.linkedin.com" target="_blank">
+            <a class="icon" href="https://www.linkedin.com" target="_blank">
                 <img src="img/footer/icon_1.png" alt="icon linked in">
             </a>
-            <a href="https://www.instagram.com" target="_blank">
+            <a class="icon" href="https://www.instagram.com" target="_blank">
                 <img src="img/footer/icon_2.png" alt="icon instagram">
             </a>
-            <a href="https://www.facebook.com" target="_blank">
+            <a class="icon" href="https://www.facebook.com" target="_blank">
                 <img src="img/footer/icon_3.png" alt="icon facebook">
             </a>
-            <a href="mailto:your_email@example.com">
+            <a class="icon" href="mailto:your_email@example.com">
                 <img src="img/footer/icon_4.png" alt="icon mail">
             </a>
         </div>
