--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
 
 <body>
     <div class="pink_background">
-        <div>
-            <div>
-                <h2>About me</h2>
+        <div class="grid_1_1">
+            <div class="about">
+                <h1>About me</h1>
                 <p>Hi there! I'm Melanie Grath, a 21-year-old multimedia design student based in Slagelse, Denmark. I’ve
                     always had a deep
                     passion for creativity, which fuels both my work and my personal life. Whether I’m sketching in my
@@ -73,12 +73,12 @@
                     to grow, and I’d love
                     to collaborate on exciting projects that bring ideas to life.</p>
             </div>
-            <div><img src="img/about/about_1.png" alt="me"></div>
+            <div class="me"><img src="img/about/about_1.png" alt="me"></div>
         </div>
     </div>
 
     <div class="green_background">
-        <div>
+        <div class="about_text">
             <h2>Skills</h2>
             <p>Through my studies and past experiences, I have developed a well-rounded skill set that enables me to
                 contribute
@@ -104,7 +104,7 @@
                 </p>
             </div>
             <div class="skills">
-                <img src="img/about/icon_1.png" alt="icon">
+                <img src="img/about/icon_3.png" alt="icon">
                 <h2 class="bold">Language skills</h2>
                 <p>I am fluent in Danish and English, with basic German skills, enabling me to work in international
                     settings and connect
@@ -112,7 +112,7 @@
                 </p>
             </div>
             <div class="skills">
-                <img src="img/about/icon_1.png" alt="icon">
+                <img src="img/about/icon_4.png" alt="icon">
                 <h2 class="bold">Communication</h2>
                 <p>I value clear communication and collaboration, ensuring projects align with goals. I thrive in team
                     settings, sharing
