--- a/content.html
+++ b/content.html
@@ -96,16 +96,17 @@
     </div>
     <footer>
         <div class="footer_flex">
-            <a href="https://www.linkedin.com" target="_blank">
+            <a class="icon" href="https://www.linkedin.com/in/melanie-grath-814ba3324/" target="_blank">
                 <img src="img/footer/icon_1.png" alt="icon linked in">
             </a>
-            <a href="https://www.instagram.com" target="_blank">
+            <a class="icon" href="https://www.instagram.com/melanie_grath?igsh=cnAzOXZ5aDZkaDRw&utm_source=qr"
+                target="_blank">
                 <img src="img/footer/icon_2.png" alt="icon instagram">
             </a>
-            <a href="https://www.facebook.com" target="_blank">
+            <a class="icon" href="https://www.facebook.com/melanie.grath.1" target="_blank">
                 <img src="img/footer/icon_3.png" alt="icon facebook">
             </a>
-            <a href="mailto:your_email@example.com">
+            <a class="icon" href="mailto:your_email@example.com">
                 <img src="img/footer/icon_4.png" alt="icon mail">
             </a>
         </div>
