--- a/ux.html
+++ b/ux.html
@@ -93,7 +93,23 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="footer_flex">
+            <a class="icon" href="https://www.linkedin.com/in/melanie-grath-814ba3324/" target="_blank">
+                <img src="img/footer/icon_1.png" alt="icon linked in">
+            </a>
+            <a class="icon" href="https://www.instagram.com/melanie_grath?igsh=cnAzOXZ5aDZkaDRw&utm_source=qr"
+                target="_blank">
+                <img src="img/footer/icon_2.png" alt="icon instagram">
+            </a>
+            <a class="icon" href="https://www.facebook.com/melanie.grath.1" target="_blank">
+                <img src="img/footer/icon_3.png" alt="icon facebook">
+            </a>
+            <a class="icon" href="mailto:your_email@example.com">
+                <img src="img/footer/icon_4.png" alt="icon mail">
+            </a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
